紹介文の変更

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 
       <div class="content">
         <div class="important">
-          <p>以下は、body要素内でコンテンツを記述する際に用いる要素である。<br>
-          文書型宣言、html要素、head要素の記述を忘れないこと。</p>
+          <p>ようこそ、「東京の絶品うどん巡り」へ！都内に点在する魅力的なうどん店を徹底リサーチし、その中でも特におすすめのお店を厳選してご紹介します。老舗の伝統的な味から、創作うどんの新しい楽しみ方まで、さまざまなうどん体験をお届けします。あなたの次のお気に入りの一軒を見つけてみませんか？おいしいうどんの世界へ、一緒に探検しましょう！</p>
         </div>
         <h2 id="id1">ランチにおすすめ</h2>
         <h3>店１</h3>
