題名の変更

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>都内のおすすめのうどん店まとめ</h1>
+    <h1>東京の絶品うどん巡り</h1>
     <a href="#" id="top">Top</a>
 
     <div id="container">
