--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h2 id="id2">ディナーにおすすめ</h2>
         <h3>山長</h3>
         <ul>
-          <li>うどん屋 山長 住所:渋谷区恵比寿1丁目1-5エビスオークビル1 1F</li>
+          <li>山長 住所:渋谷区恵比寿1丁目1-5エビスオークビル1 1F</li>
           <li>お店の食べログは<a href="https://tabelog.com/tokyo/A1303/A130302/13045327/">こちら</a></li>
           <li>JR恵比寿駅から徒歩5分</li>
           <li>営業時間11:30 ~ 15:30(土日16:00), 18:00 ~ 22:30 </li>
@@ -61,21 +61,28 @@
         <h2 id="id4">インスタ映えに最適</h2>
         <h3>新堀</h3>
         <ul>
-          <li>うどん屋 新堀 住所:渋谷区千駄ヶ谷5丁目23-9モルフォ1F</li>
+          <li>新堀 住所:渋谷区千駄ヶ谷5丁目23-9モルフォ1F</li>
           <li>お店の食べログは<a href="https://tabelog.com/tokyo/A1304/A130403/13247630/">こちら</a></li>
           <li>JR代々木駅から徒歩4分、JR新宿駅から徒歩10分</li>
           <li>営業時間11:30 ~ 15:30, 17:30 ~ 20:30(火曜日 ~ 金曜日のみ)</li>
           <li>予算1000 ~ 2000円</li>
         </ul>
-        <h3>うどん屋 谷や</h3>
+        <h3>谷や</h3>
         <ul>
-          <li>うどん屋 谷や 住所:中央区日本橋人形町2-15-17 1F</li>
+          <li>谷や 住所:中央区日本橋人形町2-15-17 1F</li>
           <li>お店の食べログは<a href="https://tabelog.com/tokyo/A1302/A130204/13114085/">こちら</a></li>
           <li>東京メトロ半蔵門線 水天宮前駅 7番出口から徒歩1分、東京メトロ日比谷線 人形町駅から徒歩7分</li>
           <li>営業時間11:00 ~ 21:15(毎日)</li>
           <li>予算1000 ~ 2000円</li>
         </ul>
-        <h3>店３</h3>
+        <h3>切麦や甚六</h3>
+        <ul>
+          <li>切麦や甚六 住所:新宿区1丁目17-1 LAND・DEN1F</li>
+          <li>お店の食べログは<a href="https://tabelog.com/tokyo/A1304/A130402/13182646/">こちら</a></li>
+          <li>東京メトロ丸の内線 新宿御苑前駅から徒歩3分</li>
+          <li>営業時間11:30 ~ 16:00, 17:30 ~ 22:30(毎日)</li>
+          <li>予算1500 ~ 3000円</li>
+        </ul>
 
         <h2 id="id5">沢山食べたいとき</h2>
         <h3>店１</h3>
