--- a/index.html
+++ b/index.html
@@ -51,10 +51,18 @@
         <p>強調する。ブラウザの表示上は太文字になる。</p>
 
         <h2 id="id3">INIAD生におすすめ</h2>
-        <h3>店１</h3>
-        <p>li要素と組み合わせて順序のない箇条書きを表示する。<span class="alert">フレージングコンテンツ内で用いないこと。</span><span class="alert">子要素となるのは、li。</span></p>
-        <h3>店２</h3>
-        <p>li要素と組み合わせて順序のある箇条書きを表示する。<span class="alert">フレージングコンテンツ内で用いないこと。</span><span class="alert">子要素となるのは、li。</span></p>
+        <h3>うどんダインイング  うずまき</h3>
+        <ul>
+          <li>うどんダイニング うずまき 住所:東京都北区赤羽１丁目２−５</li>
+          <li>お店の食べログは<a href='https://tabelog.com/tokyo/A1323/A132305/13230353/'>こちら</a></li>
+          <li>JR赤羽駅から徒歩一分</li>
+          <li>営業時間 平日 ランチ11:30 ~ 15:00(14:30 L.O.) ,ディナー17:00 ~ 23:00(22:30 又は麺切れでL.O.) 土日祝11:30 ~ 23:00(22:30 又は麺切れでL.O.)</li>
+          <li>予算1000 ~ 1600円 コース料理3500 ~ 5500円</li>
+        </ul>
+        <h3>銀座木屋ビーンズ赤羽店</h3>
+        <ul>
+          
+        </ul>
         <h3>店３</h3>
         <p>箇条書きの各項目を表示する。</p>
 
