ランチにおすすめの変更

--- a/index.html
+++ b/index.html
@@ -26,15 +26,37 @@
           <p>ようこそ、「東京の絶品うどん巡り」へ！都内に点在する魅力的なうどん店を徹底リサーチし、その中でも特におすすめのお店を厳選してご紹介します。老舗の伝統的な味から、創作うどんの新しい楽しみ方まで、さまざまなうどん体験をお届けします。あなたの次のお気に入りの一軒を見つけてみませんか？おいしいうどんの世界へ、一緒に探検しましょう！</p>
         </div>
         <h2 id="id1">ランチにおすすめ</h2>
-        <h3>店１</h3>
-        <p>見出しであることを表す。<span class="alert">フレージングコンテンツ（独立したブロックを構成しない要素）内で用いないこと。</span></p>
+        <h3>うどん　慎</h3>
         <ul>
-          <li>h1が最も上位で、h6が最も下位</li>
-          <li>一般的にh1 ~ h6の順に小さくなる</li>
+          <li>住所：〒151-0053　東京都渋谷区代々木2丁目20-16　相馬ビル1F</li>
+          <li><a href="https://udonshin.com">ウェブページ</a></li>
+          <li>ご予算：900円～5000円</li>
+          <li>営業時間11:30～L.O.22:00</li>
+          <li>説明：最もうどんに適した小麦粉を探すところから始めたという、店主がこだわりにこだわり抜いた「つるっ」「ぷりっ」っとした麺がオススメ！削り節と昆布から取った関西風の出汁を使った麺つゆと相性抜群！細部までこだわり抜いた最高の一杯をいかがですか？</li>
         </ul>
-        <h3>店２</h3>
-        <p>段落であることを表す。<span class="alert">フレージングコンテンツ内で用いないこと。</span></p>
-        <h3>店３</h3>
+        <h3>おにやんま</h3>
+        <ul>
+          <li>住所：〒143-0031　東京都品川区西五反田1丁目6-3</li>
+          <li>ご予算：1000円未満</li>
+          <li>営業時間7:00~3:00</li>
+          <li>電話番号：03-3464-5111</li>
+          <li>説明：おにやんまの特徴はモッチモチの麺の讃岐うどんにサクッとジューシーなとり天とちくわ天がおいしいお店です！立ち食いスタイルなので回転率がよく、ストレス無くうどんをいただくことが出来ますよ！</li>
+        </ul>
+        <h3>やしま</h3>
+        <ul>
+          <li>住所：〒150-0044　東京都渋谷区円山町10-13　サンライズ渋谷1F</li>
+          <li>ご予算：2000円未満</li>
+          <li>営業時間
+            <ul>
+              <li>月曜日11:00~18:00</li>
+              <li>火曜日11:00~14:00</li>
+              <li>水曜日11:00~22:00</li>
+              <li>木～日曜日11:00~23:00</li>
+            </ul>
+          </li>
+          <li>電話番号：03-6455-1533</li>
+          <li>説明：香川県からやって来た本格派！上品な鰹出汁の風味の麺つゆともちもちツヤツヤな麺は相性抜群！麺の風味をさらに味わいたいならきしめん風の幅広の麺を頼むのもあり！</li>
+        </ul>
 
         <h2 id="id2">ディナーにおすすめ</h2>
         <h3>山長</h3>
