iniad生におすすめを追加

--- a/index.html
+++ b/index.html
@@ -84,10 +84,20 @@
         </ul>
         <h3>銀座木屋ビーンズ赤羽店</h3>
         <ul>
-          
+          <li>銀座木屋ビーンズ赤羽店 住所:東京都北区赤羽１丁目１−１</li>
+          <li>お店の食べログは<a href='https://tabelog.com/tokyo/A1323/A132305/13041672/'>こちら</a></li>
+          <li>JR赤羽駅から徒歩一分</li>
+          <li>営業時間 10:00 ~ 23:00(定休日は施設に準ずる)</li>
+          <li>予算 1000 ~ 1500円</li>
         </ul>
-        <h3>店３</h3>
-        <p>箇条書きの各項目を表示する。</p>
+        <h3>東京KINGうどん 赤羽</h3>
+        <ul>
+          <li>東京KINGうどん 赤羽 住所:東京都北区赤羽西１丁目４０−３</li>
+          <liお店の食べログは<a href='https://tabelog.com/tokyo/A1323/A132305/13286840/'>こちら</a>></li>
+          <li>JR赤羽駅から徒歩一分</li>
+          <li>営業時間 11:30 ~ 14:30(月・火・水・木・金) 土・日・祝 定休日</li>
+          <li>予算 1000 ~ 1500円</li>
+        </ul>
 
         <h2 id="id4">インスタ映えに最適</h2>
         <h3>新堀</h3>
